<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="55dp"
    android:gravity="center_horizontal">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="cs371m.hermes.futuremessenger.AboutActivity"
        tools:showIn="@layout/activity_about">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/about_text_welcome"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="1dp"
            android:textColor="@color/plain_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_fumes_detail"
            android:textSize="15sp"
            android:paddingBottom="10dp"
            android:textStyle="italic"
            android:textColor="@color/plain_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/some_tips"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            android:textColor="@color/plain_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_types"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:paddingBottom="1dp"
            android:textColor="@color/plain_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_types_detail"
            android:paddingBottom="10dp"
            android:textSize="15sp"
            android:textColor="@color/plain_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_delivery_options"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:paddingBottom="1dp"
            android:textColor="@color/plain_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_delivery_detail"
            android:paddingBottom="10dp"
            android:textSize="15sp"
            android:textColor="@color/plain_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_delivery"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:paddingBottom="1dp"
            android:textColor="@color/plain_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_delivery_detail"
            android:paddingBottom="10dp"
            android:textSize="15sp"
            android:textColor="@color/plain_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mms_delivery"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:paddingBottom="1dp"
            android:textColor="@color/plain_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mms_delivery_detail"
            android:paddingBottom="10dp"
            android:textSize="15sp"
            android:textColor="@color/plain_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_preset"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:paddingBottom="1dp"
            android:textColor="@color/plain_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preset_details"
            android:paddingBottom="10dp"
            android:textSize="15sp"
            android:textColor="@color/plain_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text_created_by"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="1dp"
            android:textColor="@color/plain_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_names"
            android:paddingBottom="10dp"
            android:textSize="15sp"
            android:textColor="@color/plain_white"/>
    </LinearLayout>
</ScrollView>