<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cs371m.hermes.futuremessenger.EditPreset"
    tools:showIn="@layout/activity_edit_preset">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preset_header_name"
            android:textSize="18sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edit_preset_name"
            android:maxLength="140"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:minLines="1"
            android:maxLines="5"
            android:scrollHorizontally="true"
            android:imeOptions="actionNext"
            android:hint="@string/hint_preset_name"
            android:textSize="18sp"
            android:paddingTop="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/preset_header_message"
            android:textSize="18sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edit_preset_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textImeMultiLine|textMultiLine"
            android:minLines="1"
            android:maxLines="5"
            android:scrollHorizontally="false"
            android:imeOptions="actionDone"
            android:hint="@string/hint_preset_message"
            android:textSize="18sp"
            android:paddingTop="8dp" />
    </LinearLayout>

</RelativeLayout>
