<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cs371m.hermes.futuremessenger.MultimediaMessageActivity"
    tools:showIn="@layout/activity_multimedia_message">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <LinearLayout android:id="@+id/mms_layout_recipients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipients"
            android:textSize="18sp"/>
        <EditText android:id="@+id/mms_recipients_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/hint_recipients"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp" />
    </LinearLayout>
    <RelativeLayout android:id="@+id/mms_layout_datetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:id="@+id/mms_textview_datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_datetime"
            android:textSize="18sp" />
        <Button android:id="@+id/mms_button_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:layout_below="@id/mms_textview_datetime"
            android:layout_marginLeft="18dp"
            android:onClick="showDatePickerDialog" />
        <Button android:id="@+id/mms_button_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:layout_toRightOf="@id/mms_button_date"
            android:layout_toEndOf="@id/mms_button_date"
            android:layout_below="@id/mms_textview_datetime"
            android:onClick="showTimePickerDialog" />
    </RelativeLayout>
    <LinearLayout android:id="@+id/mms_layout_attachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Image"
            android:textSize="18sp" />
        <ImageButton android:id="@+id/mms_image_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:scaleType="fitCenter"
            android:maxHeight="60dp"
            android:src="@drawable/picture_icon"
            android:onClick="selectAttachment"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/mms_layout_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Text"
            android:textSize="18sp"/>
        <EditText android:id="@+id/mms_message_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textImeMultiLine"
            android:imeOptions="actionDone"
            android:hint="@string/hint_message"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

</LinearLayout>
</ScrollView>